syntax = "proto3";
package erc20;
option go_package = "/erc20";

import "proto/erc20/hdwallet.message.proto";

service HDWallet {
  rpc CreateWallet(CreateWalletInput) returns (CreateWalletOutput);
  rpc GetBalance(GetBalanceInput) returns (GetBalanceOutput);
}